--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>Shafeen's Personal Page</title>
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-<link rel="stylesheet" href="css/animate.min.css">
-<link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Shafeen Rahman</title>
 </head>
 
 <body>
-<video playsinline autoplay muted loop poster="media/borealis.png" id="bgvid">
-  <source src="media/borealis.webm" type="video/webm">
-  <source src="media/borealis.mp4" type="video/mp4">
-</video>
-<h1 class="animated fadeInDown">Shafeen Rahman</h1>
-<h2 class="animated fadeInUp">Java. Autodesk Inventor.</h2>
-<h3 class="animated fadeInUp">GNU/Linux and UNIX Sysadmin. Free Software Activist.</h3>
+    <video autoplay muted loop poster="media/borealis.png" id="bgvid">
+        <source src="media/borealis.webm" type="video/webm">
+        <source src="media/borealis.mp4" type="video/mp4">
+    </video>
+
+    <div class="row">
+        <div class="col">
+            <div class="jumbotron">
+                <div class="container">
+                    <h1 class="display-1">Shafeen Rahman</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="font-family: Lato">
+        <div class="col">
+            <div class="container">
+                <h4 class="display-4">Linux | FreeBSD | Java | Arduino</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <h4>
+                <a href="https://github.com/shafeenr">
+                    <i class="fab fa-github"></i>
+                </a>
+            </h4>
+        </div>
+        <div class="col">
+            <h4>
+                <a href="mailto:shafeenr@tuta.io">
+                    <i class="far fa-envelope-open"></i>
+                </a>
+            </h4>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
