fix(add Vivus.js name)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Shafeen Rahman</title>
@@ -20,41 +19,47 @@
         <source src="media/borealis.mp4" type="video/mp4">
     </video>
 
-    <div class="row">
-        <div class="col">
-            <div class="jumbotron">
-                <div class="container">
-                    <h1 class="display-1">Shafeen Rahman</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="jumbotron">
+                    <object id="my-svg" type="image/svg+xml" data="media/namea.svg" style="width: 100%"></object>
+
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row" style="font-family: Lato">
-        <div class="col">
-            <div class="container">
-                <h4 class="display-4">Linux | FreeBSD | Java | Arduino</h4>
+        <div class="row">
+            <div class="col-8">
+                <h4 class="display-4">Linux/FreeBSD Sysadmin. Java/Arduino Programmer.</h4>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col">
+                        <h1>
+                            <a href="https://github.com/shafeenr">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </h1>
+                    </div>
+                    <div class="col">
+                        <h1>
+                            <a href="mailto:shafeenr@tuta.io">
+                                <i class="far fa-envelope-open"></i>
+                            </a>
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
+    
     </div>
 
-    <div class="row">
-        <div class="col">
-            <h4>
-                <a href="https://github.com/shafeenr">
-                    <i class="fab fa-github"></i>
-                </a>
-            </h4>
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Made with
+                <i class="far fa-heart" style="color:tomato"></i> in Canada.</span>
         </div>
-        <div class="col">
-            <h4>
-                <a href="mailto:shafeenr@tuta.io">
-                    <i class="far fa-envelope-open"></i>
-                </a>
-            </h4>
-        </div>
-    </div>
-
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -64,6 +69,7 @@
         crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
 </body>
 
 </html>
