--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class="col">
                 <div class="jumbotron">
                     <object id="my-svg" type="image/svg+xml" data="media/namea.svg" style="width: 100%"></object>
-
                 </div>
             </div>
         </div>
@@ -57,7 +56,7 @@
     <footer class="footer">
         <div class="container">
             <span class="text-muted">Made with
-                <i class="far fa-heart" style="color:tomato"></i> in Canada.</span>
+                <i class="far fa-heart" style="color:tomato"></i> in &#x1F341&#x1F1E8&#x1F1E6.</span>
         </div>
     </footer>
 
@@ -69,7 +68,6 @@
         crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
 </body>
 
 </html>
