fix(tweaks for mobile)

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-8">
-                <h4 class="display-4">Linux/FreeBSD Sysadmin. Java/Arduino Programmer.</h4>
+            <div class="col-s-10 col-m-8 col-l-8 col-xl-8">
+                <h4 class="display-4">Linux/BSD Sysadmin.</h4>
+                <h4 class="display-4">Java/Arduino Programmer.</h4>
             </div>
-            <div class="col-4">
+            <div class="col-s-2 col-m-4 col-l-4 col-xl-4">
                 <div class="row">
                     <div class="col">
                         <h1>
@@ -50,13 +51,13 @@
                 </div>
             </div>
         </div>
-    
+
     </div>
 
     <footer class="footer">
         <div class="container">
             <span class="text-muted">Made with
-                <i class="far fa-heart" style="color:tomato"></i> in &#x1F341&#x1F1E8&#x1F1E6.</span>
+                <i class="far fa-heart" style="color:tomato"></i> in &#x1F1E8&#x1F1E6.</span>
         </div>
     </footer>
 
