--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#01463c"/>
+    <meta name="theme-color" content="#01463c" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Shafeen Rahman</title>
 </head>
@@ -24,11 +23,11 @@
         <div class="row">
             <div class="col">
                 <div class="jumbotron">
-                    <object id="my-svg" type="image/svg+xml" data="media/namea.svg" style="width: 100%"></object>
+                    <object id="name-jumbotron" type="image/svg+xml" data="media/name.svg" width="100%"></object>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div id="subtitles" class="row" style="display: none">
             <div class="col-s-10 col-m-8 col-l-8 col-xl-8">
                 <h4 class="display-4">Linux/BSD Sysadmin.</h4>
                 <h4 class="display-4">Java/Arduino Programmer.</h4>
@@ -55,21 +54,25 @@
 
     </div>
 
-    <footer class="footer">
+    <footer class="footer" style="display: none">
         <div class="container">
             <span class="text-muted">Made with
                 <i class="far fa-heart" style="color:tomato"></i> in &#x1F1E8&#x1F1E6.</span>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.4/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8="
+        crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
