--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#01463c" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Shafeen Rahman</title>
@@ -19,7 +19,7 @@
         <source src="media/borealis.mp4" type="video/mp4">
     </video>
 
-    
+
     <div class="container">
         <div class="row">
             <div class="col">
@@ -30,8 +30,9 @@
         </div>
         <div id="subtitles" class="row" style="display: none">
             <div class="col-s-10 col-m-8 col-l-8 col-xl-8">
-                <h4 class="display-4">Linux/BSD Sysadmin.</h4>
-                <h4 class="display-4">Java/Arduino Programmer.</h4>
+                <h4 class="display-4">UofT CompSci and Statistics</h4>
+                <h4 class="display-5">Software Engineer (and novice Data Scientist)</h4>
+                <h4 class="display-5"><i class="far fa-heart" style="color:tomato"></i>&nbsp;&nbsp;open source, embedded/mobile and machine learning</h4>
             </div>
             <div class="col-s-2 col-m-4 col-l-4 col-xl-4">
                 <div class="row">
@@ -44,8 +45,8 @@
                     </div>
                     <div class="col">
                         <h1>
-                            <a href="mailto:shafeenr@tuta.io">
-                                <i class="far fa-envelope-open"></i>
+                            <a href="https://linkedin.com/in/shafeenr">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                         </h1>
                     </div>
@@ -62,13 +63,14 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/jquery-ui.min.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+        integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.4/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.4/vivus.min.js"
+        integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 
