--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h4 class="display-4">UofT CompSci and Statistics</h4>
                 <h4 class="display-5">Software Engineer (and novice Data Scientist)</h4>
                 <h4 class="display-5"><i class="far fa-heart" style="color:tomato"></i>&nbsp;&nbsp;<code>open source</code>,&nbsp;&nbsp;<code>embedded/mobile</code>&nbsp;&nbsp;and&nbsp;&nbsp;<code>machine learning</code></h4>
-                <h4 class="display-5">great with: xamarin/cpp, python, java, linux/bsd, cpp</h4>
+                <h4 class="display-5">great with: xamarin/c#, python, java, linux/bsd, cpp</h4>
             </div>
             <div class="col-s-2 col-m-4 col-l-4 col-xl-4">
                 <div class="row">
